--- a/Home/UI/styles.css
+++ b/Home/UI/styles.css
@@ -331,7 +331,7 @@ body, html {
   border-radius: 15px;
   overflow-x: auto;
   scroll-behavior: smooth;
-  padding: 10px;
+  margin-top: 20px;
 }
 
 .tariff-card {
