--- a/Home/UI/styles.css
+++ b/Home/UI/styles.css
@@ -342,11 +342,10 @@ body, html {
   background: var(--card-background);
   padding: 20px;
   border-radius: 15px;
-  width: 240px;
+  width: 300px;
   height: 450px;
   flex-shrink: 0;
   text-align: center;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .buy {
@@ -356,7 +355,6 @@ body, html {
   margin-top: 20px;
   font-size: 17px;
 }
-
 
 .parent {
   display: flex;
@@ -382,74 +380,6 @@ body, html {
   display: flex;
 }
 
-.support {
-  position: relative;
-  padding: 50px 0 0 10px;
-  border-radius: 10px 10px 0 0;
-  overflow: hidden;
-  background: var(--background-blue);
-  margin-top: 20px;
-}
-
-.support-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-
-.bg-support {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0;
-}
-
-.support-content {
-  position: relative;
-  z-index: 2;
-  text-align: center;
-  color: var(--text-primary);
-}
-
-.support-image-wrapper {
-  position: relative;
-  margin-top: -6rem;
-  width: 70%;
-  height: auto;
-}
-
-.img-support {
-  width: 145%;
-  overflow: hidden;
-  object-fit: cover;
-  filter: sepia(4) saturate(10) hue-rotate(-20deg); 
-  transition: filter 0.6s ease;
-  height: auto;
-  border-radius: 20px;
-}
-
-.support-button {
-  cursor: pointer;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgba(32, 32, 32, 0.142);
-  backdrop-filter: blur(12px);
-  border: 2px solid rgba(115, 115, 115, 0.65);
-  border-radius: 15px;
-  padding: 1rem 1.5rem;
-  color: var(--text-primary);
-  font-size: 1rem;
-  font-weight: 500;
-  transition: 0.3s;
-  top: 10px;
-  left: 10px;
-}
-
 a {
   text-decoration: none;
   color: var(--text-secondary);
@@ -471,6 +401,7 @@ p {
 .create-button:hover .button-icon {
   transform: translateX(3px);
 }
+
 .create-button:hover {
   background-color: #ff59004a;
   border: #ff6600 2px solid;
@@ -497,12 +428,17 @@ p {
   border-radius: 15px;
   border: 2px solid #2c2c2c;
   font-weight: 500;
+  transition: border 0.3s;
   font-size: 15px;
+}
+
+.location-block:hover {
+  border: 2px solid #6b6b6b;
+    background-color: #111; 
 }
 
 .country-icon {
   height: 30px;
-  width: auto;
 }
 
 .footer {
